# quantum-game-2

./: .editorconfig  .eslintrc.js  .firebaserc  .gitignore  .gitmodules  .prettier.js  .prettierrc.js  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cargo.toml  env.local  k8s-quantum-game-2.yaml  package-lock.json  package.json  tree.txt  tsconfig.json  vue.config.js
.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
patches/: vue-property-decorator+8.5.1.patch
public/: index.html  manifest.json
qg-rust/: .gitignore  Cargo.toml
src/: App.vue  complex.rs  dimensions.rs  enumerable.rs  eventbus.js  flags.ts  itertools.ts  lib.rs  macros.rs  main.ts  operator.rs  photons.rs  quantumweasel.d.ts  registerServiceWorker.ts  router.ts  shims-svg.d.ts  shims-tsx.d.ts  store.ts  tensor.rs  thirdparty.d.ts  types.ts  util.rs  vector.rs
src/components/: AppButton.vue  AppFooter.vue  AppLayout.vue  AppMenu.vue  AppMenuButton.vue  AppModal.vue  AppNotifications.vue  AppOverlay.vue  AppPhoton.vue  Board.vue  Cell.vue  EditorBubble.vue  ExampleElement.vue  ExampleLevel.vue  Grid.vue  InterLevelOverlay.vue  Photon.vue  Piece.vue  QButton.vue  QMenu.vue  QMenuIcon.vue  Resource.vue  ResourceContainer.vue  SaveLevel.vue  SimulationStepsDisplay.vue  SoundController.ts  SoundController.vue  SpeechBubble.vue  SvgGlobalDefs.vue  Tile.vue  ToolSlot.vue  Toolbox.vue  index.js  index.ts
src/config/: firebase.ts
src/engine/: Absorption.ts  Cell.ts  Cluster.ts  Coord.ts  Element.ts  Frame.ts  GameState.ts  Goal.ts  Grid.ts  Helpers.ts  Hint.ts  Laser.ts  (+15 more)
(+517 files in other folders)
